<?xml version="1.0"?>
<package>
  <name>indoor_localization</name>
  <version>0.1.0</version>
  <description>The indoor_localization package</description>

  <maintainer email="gabriel.araujo.5000@gmail.com">Gabriel F P Araujo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>ar_pose</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>ar_pose</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roslib</run_depend>


  <export>

  </export>
</package>
